# pyplyne

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: README.md  architecture.md  cli.md  concepts.md  cookbook.md  editor.md  examples.md  generated-cli-reference.md  generated-python-api-reference.md  interactive-sessions.md  language-guide.md  package-inspirations.md  python-api.md  quickstart.md  reference.md  release-versioning.md  sequence-patterns.md  sites-used-for-inspiration.md  troubleshooting.md
docs/package-inspirations/: dplyr.md  purrr.md
editors/nvim-pyplyne/: README.md
editors/vscode-pyplyne/: README.md  extension.js  language-configuration.json  package.json
examples/: README.md  full_language_tour.pyplyne  list_pipeline.pyplyne  polars_constructor.pyplyne  record_fields.pyplyne  shape_conversions.pyplyne  tabular_pipeline.pyplyne
examples/parity/: dplyr_filter_select_mutate.pyplyne  dplyr_group_summary.pyplyne  purrr_keep_records.pyplyne  purrr_map_sequence.pyplyne
site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
site/data/: example-catalog.json
site/scripts/: check-docs.mjs  check-prism-pyplyne.mjs  generate-cli-reference.mjs  generate-example-docs.mjs  generate-llms.mjs  generate_python_api_reference.py
site/static/: CNAME  (+1 more)
tests/: test_compiler.py  test_docs_generation.py  test_editor_docs.py  test_homepage.py  test_neovim_treesitter.py  test_session.py  test_vscode_extension.py
(+29 files in other folders)
