[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplyne"
version = "0.1.0"
description = "A lightweight data transformation DSL compiled through native CPython AST nodes."
authors = [
  {name = "Ben Brown"},
]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["dsl", "pipelines", "polars", "data-transformation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Compilers",
  "Topic :: Utilities",
]
dependencies = [
  "lark>=1.1.9",
  "polars>=1.0",
]

[project.urls]
Homepage = "https://github.com/pyplyne-org/pyplyne"
Documentation = "https://pyplyne.org/"
Repository = "https://github.com/pyplyne-org/pyplyne"
Issues = "https://github.com/pyplyne-org/pyplyne/issues"

[project.optional-dependencies]
dev = [
  "pandas>=2.2",
  "pyarrow>=16",
  "pytest>=8",
]
excel = [
  "fastexcel>=0.12",
  "xlsxwriter>=3.2",
]

[project.scripts]
pyplyne = "pyplyne.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyplyne = ["grammar.lark"]
